-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta1
-
Pixel 3a 12.0
-
-
d24c22598 (dev), ab8cabddc (6.6), 42d42571b (6.5)
-
2023wk26FOQtforAndroid
Steps to reproduce:
- Open the QML Camera app from examples of Qt 6.6.0 b1.
- Build and run the app on Android.
- Lock the device.
Expected: The app works and is still active when user unlock the device.
Actual: The app crashes.
E BufferQueueProducer: [SurfaceView[org.qtproject.example.declarative_camera/org.qtproject.qt.android.bindings.QtActivity]#1(BLAST Consumer)1](id:6a7a00000002,api:0,p:-1,c:27258) disconnect: not connected (req=1) W libEGL : EGLNativeWindowType 0x71f1f9c640 disconnect failed W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers E AndroidRuntime: FATAL EXCEPTION: CameraBackground E AndroidRuntime: Process: org.qtproject.example.declarative_camera, PID: 27258 E AndroidRuntime: java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more. E AndroidRuntime: at android.media.ImageReader.acquireNextImage(ImageReader.java:560) E AndroidRuntime: at android.media.ImageReader.acquireLatestImage(ImageReader.java:441) E AndroidRuntime: at org.qtproject.qt.android.multimedia.QtCamera2$4.onImageAvailable(QtCamera2.java:157) E AndroidRuntime: at android.media.ImageReader$1.run(ImageReader.java:837) E AndroidRuntime: at android.os.Handler.handleCallback(Handler.java:938) E AndroidRuntime: at android.os.Handler.dispatchMessage(Handler.java:99) E AndroidRuntime: at android.os.Looper.loopOnce(Looper.java:201) E AndroidRuntime: at android.os.Looper.loop(Looper.java:288) E AndroidRuntime: at android.os.HandlerThread.run(HandlerThread.java:67) I Process : Sending signal. PID: 27258 SIG: 9
Reproducibility: 100%
- clones
-
QTBUG-114659 [DeclarativeCamera] Zoom control is incorrectly positioned and does not work on Android
-
- Closed
-
- relates to
-
QTQAINFRA-5592
Qt Test Attack - Q2, 2023
-
- Open
-
| For Gerrit Dashboard: QTBUG-114660 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 488506,3 | Android: Handle application state changes in camera | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 488775,2 | Android: Handle application state changes in camera | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 488776,2 | Android: Handle application state changes in camera | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |