Android: Handle application state changes in camera

Camera should be deactivated when application is moved to the background
(or screen is locked) and after bringing it back - activated again.
To do this, camera need to handle applicationStateChanged signal from
QGuiApplication.

Fixes: QTBUG-114660
Change-Id: Idfd0be55a48ad58ecb46cbd220062511680fe70d
Reviewed-by: Rami Potinkara <rami.potinkara@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit d24c2259803cba95e094d85e3388015b22ea687d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>